# puzzle_solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: puzzle_solver.h  search_algorithms.h
src/: main.cpp  puzzle_solver.cpp  search_algorithms.cpp
